--- a/css/ranking/ranking.css
+++ b/css/ranking/ranking.css
@@ -1,6 +1,6 @@
 .top{
     width: 100%;
-    height: 1.46rem;
+    /* height: 1.46rem; */
     padding: .2rem .4rem;
 	background-image: linear-gradient(-77deg, 
 		#17d5fd 0%, 
